<resources>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <string name="Username">Username:</string>

    <string name="Password">Password:</string>

    <string name="LoginPost">Login</string>

    <string name="App">Login Application</string>

    <string name="Status">Not login</string>

    <string name="Role">Not assigned</string>

    <string name="method">Login Method</string>

    <string name="Choose">Choose Method</string>

    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="messageWithSpannableLink">Not a Member?\nSign Up Now</string>

    <string name="title_activity_register">RegisterActivity</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="hint_name">First Name</string>

    <string name="hint_lastName">Last Name</string>

    <string name="mobileNum">Mobile Number</string>

    <string name="btn_link_to_login">Already registred! Login Me.</string>

    <string name="btn_register">REGISTER</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lorepsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>

    <string name="faq1">What is a landslide?</string>
    <string name="faq2">What to do before a landslide?</string>
    <string name="faq3">What to do during a landslide?</string>
    <string name="faq4">What happens when you hear the alarm?</string>
    <string name="faq5">What does Level 1, 2, 3 mean?</string>
    <string name="faq6">Do i need to have an internet connection when accessing the app?</string>
    <string name="faq7">Is the mobile application available only to Android?</string>

    <string name="answer1">A landslide is the movement of rock, earth, or debris down a sloped section of land. Landslides are caused by rain, earthquakes, volcanoes, or other factors that make the slope unstable.</string>
    <string name="answer2">\u2022 Get a ground assessment of your property.\n\u2022 Learn about the emergency-response and evacuation plans for your area. Develop your own emergency plan for your family or business.\n\u2022 Watch the patterns of storm-water drainage near your home, and note the places where runoff water converges, increasing flow in channels. These are areas to avoid during a storm.\n\u2022 Contact local officials, state geological surveys or departments of natural resources, and university departments of geology. Landslides occur where they have before, and in identifiable hazard locations.\n\u2022 Do not build near steep slopes, close to mountain edges, near drainage ways, or natural erosion valleys.</string>
    <string name="answer3">\u2022 Listen to local news stations on a battery-powered radio for warnings of heavy rainfall.\n\u2022 Listen for unusual sounds that might indicate moving debris, such as trees cracking or boulders knocking together.\n\u2022 If you are near a stream or channel, be alert for any sudden increase or decrease in water flow and for a change from clear to muddy water. Such changes may indicate landslide activity upstream, so be prepared to move quickly.\n\u2022 Do not delay! Save yourself, not your belongings.</string>
    <string name="answer4">\u2022 Do not panic. Immediately inform the person in charge in your community or the disaster response team for immediate evacuation.</string>
    <string name="answer5">\u2022 Level 1 - Wait for any further announcements!\n\u2022 Level 2 - Get ready for an evacuation and wait for further announcements!\n\u2022 Level 3 - Immediate evacuation is required!</string>
    <string name="answer6">No, but you need to have an internet to view the live video feed.</string>
    <string name="answer7">Yes, be ready for updates soon!</string>

</resources>
